Added connection to db and create account functionality

--- a/LoginSignup/appsettings.json
+++ b/LoginSignup/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "conString": "server=(LocalDB)\\MSSQLLocalDB;Database=Task;Trusted_Connection=True;"
+  }
 }
